Fix issue with loading commands. Add local maven repository for faster dependency loading.